[package]
name = "schnorr_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
digest = "0.10.7"
elliptic-curve = { version = "0.13.8", features = ["serde"] }
k256 = { version = "0.13.4", features = ["sha256", "ecdsa", "serde"] }
rand = "0.8"
rand_core = { version="0.6.4", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
ecdsa = "0.16.9"
sha2 = "0.10.8"
ed25519-dalek = "2.1.0"
generic-array = "1.0.0"
hex = "0.4.3"
